# grpc-rust

./: Cargo.toml  Makefile  build.rs
proto/: movie.proto  user.proto
sql/: tables.sql
src/: lib.rs  main.rs
src/grpc/: movie.rs  user.rs
src/repo/: mod.rs  movie_repo.rs  ports.rs  traits.rs  user_repo.rs
src/services/: mod.rs  movie_service.rs  user_service.rs
