[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.3"
async-trait = "0.1.59"
futures-core = "0.3.25"
futures-util = "0.3.25"
prost = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
