[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.4"
async-trait = "0.1.66"
futures-core = "0.3.27"
futures-util = "0.3.27"
prost = "0.11.8"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1.12"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
